fixed custom img btn alignment

--- a/styles/components/editor.css
+++ b/styles/components/editor.css
@@ -24,7 +24,6 @@ gap: 10px;
    
 }
 
-
 input[name='meme-line-input']{
     grid-column: 1/-1;
     width: 90%;
@@ -121,7 +120,7 @@ cursor: pointer;
     grid-column: 4;
 }
 .custom-img-btn{
-    grid-row: 7;
+    grid-row: 6;
     grid-column: 3;
 padding-top: 25px;
 height: min-content;
