--- a/styles/setup/mq.css
+++ b/styles/setup/mq.css
@@ -157,6 +157,14 @@ input[name='meme-line-input']{
     justify-self: center;
 }
 
+
+.custom-img-btn{
+    padding: 0;
+   width: 60px;
+   height: 60px;
+}
+
+
 .canvas-container{
     justify-content: center;
 }
@@ -252,6 +260,7 @@ input[name='tags-search-input']{
     margin-inline-end: 10px;
 }
 
+
 .gallery-btns-container{
     grid-column: 2;
     grid-row: 1;
@@ -259,7 +268,7 @@ input[name='tags-search-input']{
 
 .clear-filter,
 .flexible-btn{
-    
+    font-size: 1.5em;
 }
 
 /* GALLERY */
@@ -292,6 +301,7 @@ height: 100px;
 }
 /* ABOUT */
 .about{
+    padding-block: 50px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
 }
@@ -302,11 +312,13 @@ height: 100px;
 }
 
 .about-heading{
+    font-size: 4rem;
     grid-column: 2;
     grid-row: 1;
 }
 
 .about-p{
+    font-size: 3rem;
     grid-column: 2;
     grid-row: 2;
 }
